<resources>
    <string name="wrong_email">Вы ввели неверный e-mail</string>
    <string name="fragment_header">Вход в личный кабинет</string>
    <string name="title_search_job">Поиск работы</string>
    <string name="next">Продолжить</string>
    <string name="login_password_text">Войти с паролем</string>
    <string name="edt_hint">Электронная почта или телефон</string>
    <string name="search_employes"> Поиск сотрудников</string>
    <string name="put_vacancy"> Размещение вакансий и доступ к базе резюме</string>
    <string name="btn_vacancy"> Я ищу сотрудников </string>
    <string name="pin_header"> Отправили код на  </string>
    <string name="pin_description"> Напишите его, чтобы подтвердить, что это\nвы, а не кто-то другой входит в личный\nкабинет  </string>

</resources>