<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginFragment"
    android:background="@color/black"
    android:id="@+id/loginFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/fragment_header"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardFirst"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="144dp"
        app:cardBackgroundColor="@color/gray_one"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="178dp"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/tv_title_search_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/title_search_job"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="168dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/background_button_blue_selector"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_wrong_email_error"
                app:layout_constraintTop_toBottomOf="@+id/tv_wrong_email_error" />


            <TextView
                android:id="@+id/tv_wrong_email_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textFontWeight="400"
                android:textSize="13dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/edit_email"
                app:layout_constraintTop_toBottomOf="@+id/edit_email"
                tools:text="Text description here." />

            <TextView
                android:id="@+id/tv_another_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_password_text"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="@+id/btn_continue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_continue"
                app:layout_constraintTop_toTopOf="@+id/btn_continue" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_edit"
                app:boxStrokeColor="@android:color/transparent"
                app:cursorColor="@color/gray"
                app:endIconDrawable="@drawable/ic_close"
                app:endIconMode="clear_text"
                app:hintEnabled="false"
                app:hintTextColor="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_search_job"
                app:placeholderTextColor="@android:color/transparent"
                app:startIconDrawable="@drawable/ic_response">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:backgroundTint="@null"
                    android:hint="@string/edt_hint"
                    android:textColorHint="@color/gray"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSecond"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/gray_one"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardFirst">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/tv_title_search_employes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/search_employes"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/put_vacancy"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_serach_empl"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/background_button_green"
                android:text="@string/btn_vacancy"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>


