<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pinFragment"
    android:background="@color/black"
    tools:context=".presentation.pin.PinFragment">

    <TextView
        android:id="@+id/tv_headder_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:text="@string/pin_header"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pin_description"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_headder_email" />

    <com.chaos.view.PinView
        android:id="@+id/pin"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:cursorVisible="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint=" ***"
        android:inputType="number"
        android:itemBackground="@color/gray_one"
        android:textColor="@color/gray_light"
        android:textColorHint="@color/gray_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cursorColor="@color/gray_light"
        app:cursorWidth="1dp"
        app:hideLineWhenFilled="false"
        app:itemCount="4"
        app:itemHeight="48dp"
        app:itemRadius="4dp"
        app:itemSpacing="8dp"
        app:itemWidth="48dp"
        app:layout_constraintStart_toStartOf="@+id/tv_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        app:lineColor="@color/gray_two"
        app:lineWidth="0dp" />

    <Button
        android:id="@+id/btn_to_main"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_button_blue_selector"
        android:enabled="false"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin" />
</androidx.constraintlayout.widget.ConstraintLayout>